--- a/koo.html
+++ b/koo.html
@@ -58,7 +58,7 @@
 
  
 <div class="backtoindex">
-  <a href="index.html"> git st<i class="fa fa-arrow-left backarrow" aria-hidden="true"></i></a>
+  <a href="index.html"> <i class="fa fa-arrow-left backarrow" aria-hidden="true"></i></a>
 </div>
 
 </div>
