--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
        
 <div class="cancel">
-    <img  src="images/IMG-20240502-WA0087.jpg" alt="">
+    <img  src="images/IMG-20240502-WA0087 1.png" alt="">
 </div>
        
     </div>
